[package]
authors = ["Maxim Shishmarev <msgmaxim@gmail.com>"]
edition = "2018"
name = "session_testing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
byteorder = "*"
hex = "*"
openssl = "*"
rand = "*"
reqwest = {version = "0.10", features = ["json"]}
ring = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
tokio = {version = "0.2", features = ["time", "macros"]}
async-trait = "*"
parking_lot = "*"
sha2 = "0.8.1"
futures = "*"
structopt = "0.3"
async-std = "*"
log = "0.4"
env_logger = "*"
ringbuf = "*"
rouille = "*"
zmq = "*"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]