[package]
authors = ["Maxim Shishmarev <msgmaxim@gmail.com>"]
edition = "2018"
name = "session_testing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
async-trait = "*"
base64 = "*"
byteorder = "*"
env_logger = "*"
futures = "*"
hex = "*"
log = "0.4"
openssl = "*"
parking_lot = "*"
rand = "*"
reqwest = {version = "0.11", features = ["json"]}
ring = "*"
ringbuf = "*"
rouille = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
sha2 = "0.8.1"
structopt = "0.3"
tokio = {version = "1", features = ["time", "macros", "rt-multi-thread"]}
zmq = "*"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.24"
